--- a/app/src/main/res/layout/activity_create_hike_screen.xml
+++ b/app/src/main/res/layout/activity_create_hike_screen.xml
@@ -6,4 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".CreateHikeScreen">
 
+    <Button
+        android:id="@+id/createHikeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="137dp"
+        android:layout_marginTop="153dp"
+        android:layout_marginEnd="180dp"
+        android:text="@string/create_hike"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/viewHike"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginEnd="177dp"
+        android:text="ViewHike"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createHikeButton" />
+
+    <TextView
+        android:id="@+id/viewHikeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="109dp"
+        android:layout_marginEnd="198dp"
+        android:layout_marginBottom="280dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewHike" />
 </androidx.constraintlayout.widget.ConstraintLayout>
