create hike added.

--- a/app/src/main/res/layout/activity_create_hike_screen.xml
+++ b/app/src/main/res/layout/activity_create_hike_screen.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateHikeScreen">
+    tools:context=".CreateHikeScreen"
+    >
 
     <ScrollView
         android:layout_width="409dp"
@@ -22,7 +23,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:layout_margin="5dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -37,7 +39,9 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_launcher_background" />
+                    app:srcCompat="@drawable/ic_launcher_background"
+                    tools:ignore="ImageContrastCheck"
+                    android:contentDescription="TODO" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
@@ -46,22 +50,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/create_hike_title"
-                app:autoSizeMaxTextSize="14sp" />
+                app:autoSizeMaxTextSize="14sp"
+                />
 
             <EditText
                 android:id="@+id/editTextHikeName"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:ems="10"
-                android:hint="@string/hike_name_label"
-                android:inputType="@string/hike_name_label" />
+                android:inputType="textPersonName"
+                android:hint="@string/hike_name_label" />
 
             <EditText
                 android:id="@+id/editTextLocationName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="@string/hike_name_label"
+                android:hint="@string/hike_location_label"
                 android:inputType="textPersonName"
                 android:minHeight="48dp" />
 
@@ -69,7 +74,6 @@
                 android:id="@+id/editTextDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:hint="@string/hike_date_label"
                 android:inputType="date"
                 android:minHeight="48dp" />
@@ -101,10 +105,10 @@
                 android:id="@+id/editTextHikeLength"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:autofillHints=""
                 android:hint="@string/hike_length_label"
-                android:inputType="textPersonName"
-                android:minHeight="48dp" />
+                android:minHeight="48dp"
+                android:inputType="textPersonName" />
 
             <EditText
                 android:id="@+id/editTextDifficultyLevel"
@@ -113,17 +117,19 @@
                 android:ems="10"
                 android:hint="@string/hike_difficulty_label"
                 android:inputType="textPersonName"
-                android:minHeight="48dp" />
+                android:minHeight="48dp"
+                android:textColorHint="#757575" />
 
             <EditText
                 android:id="@+id/editTextHikeDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint = "@string/hike_description_label"
                 android:ems="10"
                 android:gravity="start|top"
+                android:hint="@string/hike_description_label"
                 android:inputType="textMultiLine"
-                android:minHeight="48dp" />
+                android:minHeight="48dp"
+                android:textColorHint="#757575" />
 
             <Button
                 android:id="@+id/saveHikeButton"
