Edit hike, delete hike, view hike, Add observation, delete observation completed

--- a/app/src/main/res/layout/activity_confirm_details.xml
+++ b/app/src/main/res/layout/activity_confirm_details.xml
@@ -8,9 +8,11 @@
     tools:context=".ConfirmDetailsActivity">
 
     <LinearLayout
-        android:layout_width="415dp"
-        android:layout_height="664dp"
-        android:layout_margin="20dp"
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="543dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/finalSaveButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,14 +21,40 @@
 
         <TextView
             android:id="@+id/confirmHikeLabel"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
             android:text="@string/confirm_details_label" />
 
         <TextView
             android:id="@+id/hikeDetailsReview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/observationsTitleCD"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/observations" />
+
+            <Button
+                android:id="@+id/addObservationButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/add_observation" />
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/observationsListView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
 
     </LinearLayout>
@@ -37,10 +65,25 @@
         android:layout_height="48dp"
         android:layout_marginStart="52dp"
         android:layout_marginEnd="77dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/save_hike"
+        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="282dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="77dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/delete_hike"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
