--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -86,8 +86,8 @@
                 android:layout_height="82dp"
                 android:layout_marginLeft="165dp"
                 android:layout_marginTop="40dp"
-                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam"
-                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam" />
+                android:text="This mobile application has been created as a group coursework for the Mobile Application Development Module (COMP1424) at the University of Greenwich, London."
+                tools:text="This mobile application has been created as a group coursework for the Mobile Application Development Module (COMP1424) at the University of Greenwich, London." />
 
         </androidx.cardview.widget.CardView>
 
@@ -108,6 +108,7 @@
                 android:id="@+id/clearDBButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="25dp"
                 android:text="@string/clear_hikes_data" />
 
             <Button
